# boring-semantic-layer

./: pyproject.toml
docs/md/doc/: bucketing.md  builder-agent.md  getting-started.md  mcp.md  nested-subtotals.md  query-agent-mcp.md  query-methods.md  reference.md  semantic-table.md  windowing.md
docs/md/prompts/query/mcp/: tool-query-param-time_grain.md  tool-search-dimension-values-desc.md
docs/web/public/bsl-data/: bucketing.json  builder-agent.json  charting.json  compose.json  example.json  getting-started.json  indexing.json  mcp.json  nested-subtotals.json  percentage-total.json  query-agent-chat.json  query-agent-llm-tool.json  query-agent-mcp.json  query-methods.json  reference.json  semantic-table.json  sessionized.json  windowing.json  yaml-config.json
examples/: README.md  quickstart.py  sessionized_data.py  window_functions.py  xorq_roundtrip.py
src/boring_semantic_layer/: __init__.py  api.py  expr.py  measure_scope.py  ops.py  query.py  utils.py  yaml.py
src/boring_semantic_layer/agents/: tools.py
src/boring_semantic_layer/agents/backends/: langgraph.py  mcp.py
src/boring_semantic_layer/agents/tests/: test_semantic_mcp.py
src/boring_semantic_layer/agents/utils/: chart_handler.py
src/boring_semantic_layer/chart/md_parser/: executor.py
src/boring_semantic_layer/chart/tests/: test_chart.py
src/boring_semantic_layer/serialization/: __init__.py  context.py  extract.py  freeze.py  helpers.py  reconstruct.py
src/boring_semantic_layer/tests/: test_bi_traps.py  test_date_filter_fix.py  test_deferred_api.py  test_dependency_groups.py  test_flights_schemas.py  test_index.py  test_join_prefixing.py  test_make_schema.py  test_malloy_inspired.py  test_malloy_xorq_roundtrip.py  test_measure_reference_styles.py  test_preagg_stress.py  test_query.py  test_real_world_scenarios.py  test_xorq_backends.py  test_xorq_convert.py  test_xorq_integration.py  test_xorq_string_serialization.py  test_yaml.py
src/boring_semantic_layer/tests/integration/malloy_data/: cohorts.py  moving_avg.py  percent_of_total.py
