[project]
name = "boring-semantic-layer"
version = "0.3.9"
description = "A boring semantic layer built with ibis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "attrs>=25.3.0",
    "ibis-framework>=11.0.0",
    "packaging",
    "pyyaml>=6.0",
    "returns>=0.26.0",
    "toolz>=1.0.0",
    "xorq>=0.3.11",
]
urls = { Homepage = "https://github.com/boringdata/boring-semantic-layer/tree/main" }
license = "MIT"
license-files = [
    "LICENSE",
]

[project.scripts]
bsl = "boring_semantic_layer.agents.cli:main"

[project.optional-dependencies]
examples = ["xorq[duckdb]>=0.3.4", "xorq", "duckdb<1.4"]

# Visualization backends
viz-altair = ["altair>=5.0.0", "vl-convert-python>=1.0.0"]
viz-plotly = ["plotly>=6.3.0", "kaleido", "nbformat>=4.2.0"]
viz-plotext = ["plotext>=5.0.0"]

agent = [
    "langchain>=0.3.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "plotext>=5.0.0",
]

# MCP server backend
mcp = [
    "fastmcp>=2.12.4",
]

dev = [
    "boring-semantic-layer[agent,mcp,examples,viz-altair,viz-plotly,viz-plotext]",
    "openai>=1.0.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "ruff>=0.6.7",
    "pre-commit>=4.2.0",
    "pytest",
    "pandas>=2.3.0",
    "urllib3>=2.2.3",
    "pytest-asyncio",
    "malloy>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/boring_semantic_layer"]

[tool.hatch.build.targets.wheel.shared-data]
"docs/md/skills" = "share/bsl/skills"
"docs/md/doc" = "share/bsl/doc"
"docs/md/prompts" = "share/bsl/prompts"
"docs/md/index.json" = "share/bsl/index.json"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
]
ignore = [
    "E501",  # line-too-long (handled by formatter)
    "S101",  # assert-used (needed for tests)
    "COM812",  # trailing-comma (conflicts with formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",      # assert-used
    "PLR2004",   # magic-value-comparison
    "ANN",       # type annotations not required in tests
]
"**/tests/**/*.py" = [
    "S101",      # assert-used
    "PLR2004",   # magic-value-comparison
    "ANN",       # type annotations not required in tests
]

[tool.ruff.lint.isort]
known-first-party = ["boring_semantic_layer"]

[dependency-groups]
dev = [
    "ipython>=8.38.0",
]
